--- a/static/index.html
+++ b/static/index.html
@@ -5,9 +5,9 @@
 	<title>Sample webpage</title>
 	<meta name="description" content="The sample page to run visual tests against">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="css/main.css" rel="stylesheet" media="all">
+	<link href="css/styles.css" rel="stylesheet" media="all">
 </head>
 <body>
-	hello world!
+	<span class="test">hello world!</span>
 </body>
 </html>
